Simplify KaleidescapeDiscoveryService logic
Signed-off-by: Michael Lobstein <michael.lobstein@gmail.com>